# xml

./: .gitignore  Generate.hs  README.md  Space.hs  Time.hs  bench.cabal  haskell-perf-xml.cabal  stack.yaml
src/Data/: Book.hs
