name:                bench
version:             0
license:             MIT
license-file:        LICENSE
author:              Dmitry Bushev
build-type:          Simple
cabal-version:       >=1.10

test-suite space
  main-is:          Space.hs
  build-depends:    base
                  , bytestring
                  , criterion
                  , data-default
                  , deepseq
                  , file-embed
                  , hexml
                  , weigh
                  , xeno
                  , xml-conduit
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts

benchmark time
  main-is:          Time.hs
  build-depends:    base
                  , bytestring
                  , criterion
                  , data-default
                  , file-embed
                  , hexml
                  , xeno
                  , xml-conduit
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts
