name:                haskell-perf-xml
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dmitry Bushev
build-type:          Simple
cabal-version:       >=1.10

flag libxml
  description: Enable libxml benchmarks
  default:     False

library
  exposed-modules:  Data.Book
  build-depends:    base
                  , QuickCheck
                  , bytestring
                  , deepseq
                  , dom-parser
                  , sax
                  , text
                  , time
                  , xml-conduit-writer
                  , xmlbf
                  , xmlbf-xeno
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable generate
  main-is:          Generate.hs
  build-depends:    base
                  , QuickCheck
                  , data-default
                  , haskell-perf-xml
                  , xml-conduit
                  , xml-conduit-writer
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts

test-suite space
  if flag(libxml)
    cpp-options: -DLIBXML
    build-depends: libxml
  main-is:          Space.hs
  build-depends:    base
                  , bytestring
                  , criterion
                  , data-default
                  , deepseq
                  , file-embed
                  , hexml
                  , hexpat
                  , weigh
                  , xeno
                  , xml-conduit
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts

benchmark time
  if flag(libxml)
    cpp-options: -DLIBXML
    build-depends: libxml
  main-is:          Time.hs
  build-depends:    base
                  , bytestring
                  , conduit
                  , criterion
                  , data-default
                  , deepseq
                  , dom-parser
                  , file-embed
                  , haskell-perf-xml
                  , hexml
                  , hexpat
                  , sax
                  , streaming
                  , xeno
                  , xml-conduit
                  , xmlbf
                  , xmlbf-xeno
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -rtsopts
